10/05/23 10:36 PM Agregar JAR Layout

--- a/FACTURA_MDI/nbproject/project.properties
+++ b/FACTURA_MDI/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/FACTURA_MDI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Usuario1\\Desktop\\CECEP\\TERCER SEMESTRE\\PROG.ORIENTADA A OBJETOS\\TERCER CORTE\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.1.10-bin.jar=C:\\Users\\Usuario1\\Desktop\\CECEP\\TERCER SEMESTRE\\PROG.ORIENTADA A OBJETOS\\TERCER CORTE\\mysql-connector-java-5.1.10-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.10-bin.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
