--- a/FACTURA_MDI/nbproject/project.properties
+++ b/FACTURA_MDI/nbproject/project.properties
@@ -35,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.10-bin.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
